# nexus

./: .copier-answers.yml  .gitignore  README.md
.github/workflows/: deploy.yml
debrand_retail_marketplace/: __init__.py  __manifest__.py
debrand_retail_marketplace/data/: localization_data.xml  selling_outlets_data.xml  vendor_portal_data.xml
debrand_retail_marketplace/views/: debranding_views.xml
remove_odoo_enterprise/i18n/: fr.po
setup/_metapackage/: pyproject.toml
