[project]
name = "odoo-addons-oca-server-brand"
version = "18.0.20241220.0"
dependencies = [
    "odoo-addon-disable_odoo_online==18.0.*",
    "odoo-addon-portal_odoo_debranding==18.0.*",
    "odoo-addon-remove_odoo_enterprise==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
